catkin_ws/logs/backend/build.make.742.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp: In member function ‘Eigen::Matrix4f RosHandler::getLpe()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:106:40: error: no matching function for call to ‘RosHandler::rot2rpy(Eigen::Block<Eigen::Matrix<float, 4, 4>, -1, -1, false>, double&, double&, double&)’
   rot2rpy(_lpe.topLeftCorner(3,3),r,p,y);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:106:40: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/RosHandler.cpp:1:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:55:7: note: void RosHandler::rot2rpy(Eigen::Matrix3f, float&, float&, float&)
  void rot2rpy (Matrix3f R,float& r, float& p, float& y);  
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:55:7: note:   no known conversion for argument 2 from ‘double’ to ‘float&’
make[2]: *** [CMakeFiles/frontend.dir/src/RosHandler.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:294:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:529:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
